[gd_scene load_steps=5 format=3 uid="uid://c7bmxesdp6kfa"]

[ext_resource type="Script" uid="uid://cnbtodbabj23a" path="res://scripts/ui/screens/SummonScreen.gd" id="1_summon"]
[ext_resource type="PackedScene" uid="uid://cbw7xpldky1p7" path="res://scenes/ResourceDisplay.tscn" id="2_resource"]

[sub_resource type="Gradient" id="Gradient_bg"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0.08, 0.06, 0.12, 1, 0.12, 0.1, 0.18, 1, 0.06, 0.04, 0.1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bg"]
gradient = SubResource("Gradient_bg")
fill = 1
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)

[node name="SummonScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_summon")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_bg")
expand_mode = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 650.0
offset_right = 97.0
offset_bottom = 690.0
text = "‚Üê Back"

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.6, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.7)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 28
text = "SUMMON TEMPLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResourceDisplay" parent="." instance=ExtResource("2_resource")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -520.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 48.0
grow_horizontal = 0

[node name="MainContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 80.0
offset_right = -50.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 350

[node name="LeftPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75

[node name="SummonTitle" type="Label" parent="MainContainer/LeftPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.65, 1)
theme_override_font_sizes/font_size = 16
text = "DIVINE SUMMONS"
horizontal_alignment = 1

[node name="SummonContainer" type="VBoxContainer" parent="MainContainer/LeftPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="RightPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="ShowcaseTitle" type="Label" parent="MainContainer/RightPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.65, 1)
theme_override_font_sizes/font_size = 16
text = "SUMMON SHOWCASE"
horizontal_alignment = 1

[node name="ShowcaseContainer" type="ScrollContainer" parent="MainContainer/RightPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ShowcaseContent" type="VBoxContainer" parent="MainContainer/RightPanel/ShowcaseContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="DefaultMessage" type="Label" parent="MainContainer/RightPanel/ShowcaseContainer/ShowcaseContent"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.55, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "Your summoned gods
will appear here!

Try a summon to see
what you get!"
horizontal_alignment = 1
vertical_alignment = 1
